[tool.poetry]
name = "romannumeral-kata"
version = "0.2.0"
description = ""
authors = ["Nicholas A. Del Grosso"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
python = "^3.8"
pytest = "^6.0.1"
roman = "^3.3"
numpy = "^1.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
