[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "romannumeral-kata"
version = "0.2.0"
authors = [
  { name="Nicholas A. Del Grosso"},
]
description = "The coolest package ever! Convert any Roman number into numerals :D"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "roman",
  "numpy"
]